TestApp1/K8s/TestWebAppDestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: webapp2
  spec:
    host: webapp2-service.app2ns.svc.cluster.local
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
    subsets:
      - name: v1
        labels:
          version: v1
        trafficPolicy:
          loadBalancer:
            simple: ROUND_ROBIN
      - name: v2
        labels:
          version: v2
        trafficPolicy:
          loadBalancer:
            simple: LEAST_REQUEST
