TestApp1/K8s/TestWebAppGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - web-app-gateway
  http:
    - route:
      - destination:
          host: webapp1-service.app1ns.svc.cluster.local
